Fix bugs. Improve spacing

--- a/docs/index.css
+++ b/docs/index.css
@@ -52,21 +52,21 @@ header img {
 
 #sidebar li {
   list-style-type: none;
-  color: black;
-  padding: 10px 20px 0;
   margin: 0;
-  transition: background-color 0.5s;
-  font-size: 16px;
-}
-
-#sidebar li:hover {
-  background-color: #5CC8FF;
 }
 
 #sideBar a {
+  display: block;
+  padding: 4px 20px 6px;
   white-space: nowrap;
   text-decoration: none;
   color: #1A1B41;
+  font-size: 16px;
+  transition: background-color 0.5s;
+}
+
+#sidebar a:hover {
+  background-color: #5CC8FF;
 }
 
 main {
